err/pypso.err
Listing '.'...
Listing './bin'...
Compiling './bin/dane.py'...
***   File "./bin/dane.py", line 47
    except OSError, E:
                  ^
SyntaxError: invalid syntax

Compiling './bin/psocommand.py'...
***   File "./bin/psocommand.py", line 34
    raise IndexError, "Nie istniejąca strategia %s" % par
                    ^
SyntaxError: invalid syntax

Compiling './bin/psogui.py'...
Compiling './bin/serie_komend.py'...
***   File "./bin/serie_komend.py", line 35
    print "Wykonuje: ,,%s'' (%s/%s)" % (k, i, l)
                                   ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyPSO-0.9.3.egg-info'...
Listing './lib/python3.5/site-packages/pypso'...
Compiling './lib/python3.5/site-packages/pypso/functions.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (functions.py, line 73)
Compiling './lib/python3.5/site-packages/pypso/parameters.py'...
***   File "./lib/python3.5/site-packages/pypso/parameters.py", line 82
    print p['a']
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pypso/particle.py'...
***   File "./lib/python3.5/site-packages/pypso/particle.py", line 34
    except OverflowError, E:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pypso/pso.py'...
***   File "./lib/python3.5/site-packages/pypso/pso.py", line 93
    print pso
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pypso/stats'...
Compiling './lib/python3.5/site-packages/pypso/stats/gnuplot.py'...
***   File "./lib/python3.5/site-packages/pypso/stats/gnuplot.py", line 42
    print "#Parametry pso: (%s)" % ",".join(["%s=%s" % (p,self._pso._parameters[p].value) for p in self._pso._parameters])
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pypso/strategies.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (strategies.py, line 223)
Listing './lib/python3.5/site-packages/pypso/ui'...
Compiling './lib/python3.5/site-packages/pypso/ui/__init__.py'...
***   File "./lib/python3.5/site-packages/pypso/ui/__init__.py", line 16
    except ImportError, E:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pypso/ui/console.py'...
***   File "./lib/python3.5/site-packages/pypso/ui/console.py", line 18
    print self._pso._stepno, self._pso.get_gbest(), min(fitness), max(fitness), average(fitness), average(speed)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pypso/ui/gtk.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (gtk.py, line 36)
Listing './lib/python3.5/site-packages/pypso/widgets'...
Compiling './lib/python3.5/site-packages/pypso/widgets/__init__.py'...
***   File "./lib/python3.5/site-packages/pypso/widgets/__init__.py", line 66
    print particle
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
